--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
         <footer>
        	  <h1>Ways to contact me</h1>
-            <p><strong>Phone</strong> 111.222.3333 <br>
-			   <strong>Email</strong> email@somewhere.com <br>
-			   <strong>Website</strong> <a href="http://somewhere.com">http://somewhere.com</a></p>
+            <p><strong>Phone</strong> 530-417-4250 <br>
+			   <strong>Email</strong> missaeriel@gmail.com <br>
+			   <strong>Website</strong> <a href="https://artnm.space/artnm402-fa19/aroediger/">https://artnm.space/artnm402-fa19/aroediger/</a></p>
       </footer>
 
     </div>
