--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <section>
         	<article id="about">
             	<h1>About Me</h1>
-                <p><img src="images/photo.png" alt="photo" class="alignleft">Veggies es bonus vobis, proinde vos postulo essum magis  kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean  garlic. </p>
-                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot  courgette tatsoi pea sprouts fava bean collard greens dandelion okra  wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini. </p>
-                <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce  kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus  winter purslane kale. Celery potato scallion desert raisin horseradish  spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo  shoot green bean swiss chard seakale pumpkin onion chickpea gram corn  pea.</p>
+                <p><img src="images/photo.png" alt="photo" class="alignleft">I am a twenty-four year old self taught graphic designer from California with a lifelong passion for art in all of it's forms.</p>
+                <p>I specialize primarily in digital illustration and graphic design, but I have experience in a broad range of disciplines from concepting, storyboarding, and even web design. In addition, I have also been both participant and head organizer of a number of small independant projects, which has given me invaluable experience in both project management and being a member of a creative team.</p>
+                <p>Currently, I work on a number of freelancing gigs of varying types. If you are interested, please follow the links below for how to contact me.</p>
             </article>
 
             <article id="projects">
@@ -44,10 +44,9 @@
             	<h2>My Skills</h2>
                 <p>Celery quandong swiss chard chicory earthnut pea potato. Salsify taro catsear garlic gram celery bitterleaf wattle seed collard greens nori.</p>
                 <ul>
-                	<li>Special Skill</li>
-                    <li>Special Skill</li>
-                    <li>Special Skill</li>
-                    <li>Special Skill</li>
+                	<li>Concept Design</li>
+                  <li>Graphic Design</li>
+                  <li>Illustration</li>
                 </ul>
             </article>
 
